--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.25",
+    "googleapis": "^167.0.0",
     "next": "^14.2.5",
     "next-auth": "^4.24.13",
     "react": "^18.2.0",
