--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.87.3",
     "framer-motion": "^12.23.25",
     "googleapis": "^167.0.0",
     "next": "^14.2.5",
